--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
   </head>
   <body>
     <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#breakfast">Breakfast</a></li>
-            <li><a href="#lunch">Lunch</a></li>
-            <li><a href="#dinner">Dinner</a></li>
-            <li><a href="#recipe-submission">Add a recipe</a></li>
-        </ul>
+        <a href="#home">Home</a>
+        <a href="#breakfast">Breakfast</a>
+        <a href="#lunch">Lunch</a>
+        <a href="#dinner">Dinner</a>
+        <a href="#recipe-submission">Add a recipe</a>
     </nav>
     <h1 id="home">Hungry?</h1>
     <h2 id="breakfast">Breakfast</h2>
