--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Personal recipes</title>
   </head>
   <body>
-    <nav>
+    <nav class="text-14px text-white">
         <a href="#home">Home</a>
         <a href="#breakfast">Breakfast</a>
         <a href="#lunch">Lunch</a>
