--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Personal recipes</title>
   </head>
   <body>
-    <nav class="text-14px text-white">
+    <nav class="text-28px text-white text-bold">
         <a href="#home">Home</a>
         <a href="#breakfast">Breakfast</a>
         <a href="#lunch">Lunch</a>
