--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
             </li>
           </ul>
     </form>
+    <div class="make-it-scroll"></div>
+    <div class="make-it-scroll"></div>
+    <div class="make-it-scroll"></div>
   </body>
 </html>
