--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <a href="#dinner">Dinner</a>
         <a href="#recipe-submission">Add a recipe</a>
     </nav>
-    <h1 id="home">Hungry?</h1>
+    <div id="home">
+      <h1>Hungry?</h1>
+    </div>
     <h2 id="breakfast">Breakfast</h2>
     <h2 id="lunch">Lunch</h2>
     <h2 id="dinner">Dinner</h2>
