--- a/index.html
+++ b/index.html
@@ -19,14 +19,21 @@
         <a href="#dinner">Dinner</a>
         <a href="#recipe-submission">Add a recipe</a>
     </nav>
-    <div id="home">
+    <section id="home">
       <h1>Hungry?</h1>
-    </div>
-    <h2 id="breakfast">Breakfast</h2>
-    <h2 id="lunch">Lunch</h2>
-    <h2 id="dinner">Dinner</h2>
-    <h2 id="recipe-submission">Submit a recipe</h2>
-    <form action="/recipe-submission" method="post">
+    </section>
+    <section id="breakfast">
+      <h1 id="breakfast">Breakfast</h1>
+    </section>
+    <section id="lunch">
+      <h1 id="lunch">Lunch</h1>
+    </section>
+    <section id="dinner">
+      <h1>Dinner</h1>
+    </section>
+    <section id="recipe-submission">
+      <h1>Submit a recipe</h1>
+      <form action="/recipe-submission" method="post">
         <ul>
             <li>
               <label for="title">Recipe title</label>
@@ -42,6 +49,7 @@
             </li>
           </ul>
     </form>
+    </section>
     <div class="make-it-scroll"></div>
     <div class="make-it-scroll"></div>
     <div class="make-it-scroll"></div>
