--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <section id="home">
-      <h1>Hungry?</h1>
+      <h1 class="text-bold">Hungry?</h1>
     </section>
     <nav class="text-28px text-white text-bold">
         <a href="#home">Home</a>
@@ -23,10 +23,10 @@
         <a href="#recipe-submission">Add a recipe</a>
     </nav>
     <section id="breakfast">
-      <h1 id="breakfast">Breakfast</h1>
+      <h1>Breakfast</h1>
     </section>
     <section id="lunch">
-      <h1 id="lunch">Lunch</h1>
+      <h1>Lunch</h1>
     </section>
     <section id="dinner">
       <h1>Dinner</h1>
