--- a/index.html
+++ b/index.html
@@ -12,36 +12,40 @@
     <title>Personal recipes</title>
   </head>
   <body>
-    <section id="home">
-      <h1 class="text-bold">Hungry?</h1>
+    <section class="home display-flex-row">
+      <h1 class="text-bold text-white"><em>Hungry?</em></h1>
+      <div class="recipe-box">
+        <h2>Bibimbap</h2>
+        <p>Bibimbap simply translates to “mixed rice with meat and assorted vegetables“. You can make endless variations to this dish depending on your preference and dietary requirements </p>
+      </div>
     </section>
     <nav class="text-28px text-white text-bold">
-        <a href="#home">Home</a>
-        <a href="#breakfast">Breakfast</a>
-        <a href="#lunch">Lunch</a>
-        <a href="#dinner">Dinner</a>
-        <a href="#recipe-submission">Add a recipe</a>
+        <a href=".home">Home</a>
+        <a href=".breakfast">Breakfast</a>
+        <a href=".lunch">Lunch</a>
+        <a href=".dinner">Dinner</a>
+        <a href=".recipe-submission">Add a recipe</a>
     </nav>
-    <section id="breakfast">
+    <section class="breakfast">
       <h1>Breakfast</h1>
     </section>
-    <section id="lunch">
+    <section class="lunch">
       <h1>Lunch</h1>
     </section>
-    <section id="dinner">
+    <section class="dinner">
       <h1>Dinner</h1>
     </section>
-    <section id="recipe-submission">
+    <section class="recipe-submission">
       <h1>Submit a recipe</h1>
       <form action="/recipe-submission" method="post">
         <ul>
             <li>
               <label for="title">Recipe title</label>
-              <input type="text" id="name" name="user_name" />
+              <input type="text" class="name" name="user_name" />
             </li>
             <li>
               <label for="instructions">Instructions</label>
-              <textarea type="email" id="mail" name="user_email"></textarea>
+              <textarea type="email" class="mail" name="user_email"></textarea>
             </li>
             <li>
               <label for="recipeImage">Recipe image</label>
