--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
     <title>Personal recipes</title>
   </head>
   <body>
-    <section class="home display-flex-row">
-      <h1 class="text-bold text-white"><em>Hungry?</em></h1>
+    <section class="home margin-0">
+      <h1 class="text-bold text-white text-7rem hover-up"><em>Hungry?</em></h1>
       <div class="recipe-box">
         <h2>Bibimbap</h2>
-        <p>Bibimbap simply translates to “mixed rice with meat and assorted vegetables“. You can make endless variations to this dish depending on your preference and dietary requirements </p>
+        <p>Bibimbap simply translates to “mixed rice with meat and assorted vegetables“. You can make endless variations to this dish depending on your preference and dietary requirements.</p>
       </div>
     </section>
     <nav class="text-28px text-white text-bold">
-        <a href=".home">Home</a>
-        <a href=".breakfast">Breakfast</a>
-        <a href=".lunch">Lunch</a>
-        <a href=".dinner">Dinner</a>
-        <a href=".recipe-submission">Add a recipe</a>
+        <a href="#home">Home</a>
+        <a href="#breakfast">Breakfast</a>
+        <a href="#lunch">Lunch</a>
+        <a href="#dinner">Dinner</a>
+        <a href="#recipe-submission">Add a recipe</a>
     </nav>
-    <section class="breakfast">
+    <section id="breakfast">
       <h1>Breakfast</h1>
     </section>
-    <section class="lunch">
+    <section id="lunch">
       <h1>Lunch</h1>
     </section>
-    <section class="dinner">
+    <section id="dinner">
       <h1>Dinner</h1>
     </section>
-    <section class="recipe-submission">
+    <section id="recipe-submission">
       <h1>Submit a recipe</h1>
       <form action="/recipe-submission" method="post">
         <ul>
